--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,10 @@
 #--------------------------------------------------------------
 version: 0.2
 
-env:
+env
+  secrets-manager:
+    DOCKERHUB_PASS: "/docker/password"
+    DOCKERHUB_USERNAME: "/docker/username"
   variables:
     AWS_DEFAULT_REGION: "us-west-2"
     AWS_ACCOUNT_ID    : "000689839748"
@@ -21,6 +24,7 @@ phases:
 
   pre_build:
     commands:
+      - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
       - echo "Login to AWS ECR and get commit id"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION| docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_ID=$(git rev-parse --short HEAD)
