--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
   pre_build:
     commands:
       - echo $DOCKERHUB_PASS
-      - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
+      # - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
       - echo "Login to AWS ECR and get commit id"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION| docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_ID=$(git rev-parse --short HEAD)
