--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,9 @@
 version: 0.2
 
 env:
-  secrets-manager:
-    DOCKERHUB_PASS: arn:aws:secretsmanager:us-west-2:000689839748:secret:password
-    DOCKERHUB_USERNAME: arn:aws:secretsmanager:us-west-2:000689839748:secret:username
+  parameter-store:
+    DOCKERHUB_PASS: "docker_password"
+    DOCKERHUB_USERNAME: "docker_username"
   variables:
     AWS_DEFAULT_REGION: "us-west-2"
     AWS_ACCOUNT_ID    : "000689839748"
@@ -25,7 +25,7 @@ phases:
   pre_build:
     commands:
       - echo $DOCKERHUB_PASS
-      # - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
+      - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
       - echo "Login to AWS ECR and get commit id"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION| docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_ID=$(git rev-parse --short HEAD)
